--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "mint-ui": "^2.2.13",
+    "qs": "^6.5.1",
     "swiper": "^4.0.7",
+    "velocity-animate": "^1.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
