--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.0.1-beta3",
     "qs": "^6.5.1",
     "swiper": "^4.0.7",
     "velocity-animate": "^1.5.1",
